--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "sass": "^1.69.0"
   }
 }
